      rotate
      sylvester
      zoom

 ** Deprecated functions.

    The following functions have been deprecated in Octave 4.2 and will
    be removed from Octave 4.6 (or whatever version is the second major
    release after 4.2):

      Function           | Replacement
      -------------------|------------------
      bicubic            | interp2
      find_dir_in_path   | dir_in_loadpath
      nfields            | numfields
      usage              | print_usage
      syl                | sylvester

    The following functions were deprecated in Octave 3.8 and have been
    removed from Octave 4.2.

      default_save_options    java_new
      gen_doc_cache           java_unsigned_conversion
      interp1q                javafields
      isequalwithequalnans    javamethods
      java_convert_matrix     re_read_readline_init_file
      java_debug              read_readline_init_file
      java_invoke             saving_history

    The following keywords were deprecated in Octave 3.8 and have been
    removed from Octave 4.2

      static

    The following configuration variables were deprecated in Octave 3.8
    and have been removed from Octave 4.2

      CC_VERSION  (now GCC_VERSION)
      CXX_VERSION (now GXX_VERSION)

    The internal class <Octave_map> was deprecated in Octave 3.8 and has
    been removed from Octave 4.2.  Replacement classes are
    <octave_map> (struct array) or <octave_scalar_map> for a single structure.

Summary of important user-visible changes for version 4.0:
---------------------------------------------------------

 ** For compatibility with Matlab, the "backtrace" warning option is now
    enabled by default.

 ** The preference

      do_braindead_shortcircuit_evaluation

    is now enabled by default.

 ** The preference

      allow_noninteger_range_as_index

    is now enabled by default and the warning ID

      Octave:noninteger-range-as-index

    is now set to "on" by default instead of "error" by default and "on"