@@ -3,6 +3,7 @@ FCN_FILE_DIRS += deprecated
 deprecated_FCN_FILES = \
   deprecated/bicubic.m \
   deprecated/find_dir_in_path.m \
+  deprecated/finite.m \
   deprecated/isstr.m \
   deprecated/nfields.m \
   deprecated/strmatch.m \
