@@ -94,9 +94,10 @@ Summary of important user-visible changes for version 4.2:
       -------------------|------------------
       bicubic            | interp2
       find_dir_in_path   | dir_in_loadpath
+      finite             | isfinite
       nfields            | numfields
-      usage              | print_usage
       syl                | sylvester
+      usage              | print_usage
 
     The following functions were deprecated in Octave 3.8 and have been
     removed from Octave 4.2.
